--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,19 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Componentes de Ionic</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-list>
+    <ion-item button routerLink="/page1">Pagina 1</ion-item>
+    <ion-item button routerLink="/page2">Pagina 2</ion-item>
+    <ion-item button routerLink="/page3">Pagina 3</ion-item>
+    <ion-item button routerLink="/page4">Pagina 4</ion-item>
+    <ion-item button routerLink="/page5">Pagina 5</ion-item>
+    <ion-item button routerLink="/page6">Pagina 6</ion-item>
+    <ion-item button routerLink="/page7">Pagina 7</ion-item>
+    <ion-item button routerLink="/page8">Pagina 8</ion-item>
+    <ion-item button routerLink="/page9">Pagina 9</ion-item>
+  </ion-list>
 </ion-content>
